--- a/Dockerfiles
+++ b/Dockerfiles
@@ -2,7 +2,7 @@ FROM ubuntu
 RUN apt-get update
 RUN apt-get install -y apache2
 ADD index1.html /var/www/html
-ENTRYPOINT apachectl -D FOREGROUND
+ENTRYPOINT apachectl -D FOREGROUND   {{-D FOREGROUND will make sure apache2 keeps running in the background}
 ENV name DevOps-Intellipaat
 
 --------------------------------------------------------------
